update giao dien edit card + phan quyen

--- a/src/app/share/side-bar/side-bar/side-bar.component.html
+++ b/src/app/share/side-bar/side-bar/side-bar.component.html
@@ -22,7 +22,9 @@
   </ul>
   <br>
   <br>
-  Dự án C0421K1 <br>
-  Dự án CodeGym
+  <div style="margin-left: 10px">
+    Dự án C0421K1 <br>
+    Dự án CodeGym
+  </div>
 </nav>
 
