--- a/src/app/trello/board-view/board-view.component.html
+++ b/src/app/trello/board-view/board-view.component.html
@@ -7,6 +7,7 @@
     [isInWorkspace]="isBoardInWorkspace"
     [workspace]="currentWorkspace"
     (updateMemberEvent)="updateMembers($event)"
+    (filterEvent)="filterBoard($event)"
   ></app-navbar-board-header>
   <div class="board">
     <div class="board-wrapper">
