--- a/src/app/share/navbar-board-header/navbar-board-header.component.html
+++ b/src/app/share/navbar-board-header/navbar-board-header.component.html
@@ -56,12 +56,45 @@
         </div>
       </div>
     </div>
+
+
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
           <div style="position: relative">
+            <div id="filter-btn-dropdown" class="columns has-background-white is-hidden">
+              <div class="column is-one-fifth" style="width: 22%;">
+                <button class="button members-button" (click)="filterBoard()">Tìm</button>
+                <button class="button members-button" (click)="clearFilterBoard()">Xóa</button>
+              </div>
+              <div class="column" style="width: max-content">
+                <ul class="checkbox">
+                  <li *ngFor="let tag of tags">
+                    <input type="checkbox" [value]="tag.id" class="tag-filter-option filter-option">
+                    <span class="tag is-light" [ngClass]="tag.color">{{tag.name}}</span>
+                  </li>
+                </ul>
+              </div>
+              <div style=" padding-left: 10px;">
+                Thành viên
+                <ul class="checkbox">
+                  <li *ngFor="let member of members">
+                    <input class="form-check-label" type="checkbox" [value]="member.userId" class="member-filter-option filter-option">
+                    <span class="tag is-light">@{{member.username}}</span>
+                  </li>
+                </ul>
+              </div>
+
+            </div>
+          </div>
+          <button class="button is-primary" (click)="toggleElement('filter-btn-dropdown')">
+            <i class="fas fa-filter"></i>
+            Tìm Kiếm
+          </button>
+
+          <div style="position: relative">
             <div id="menu-btn-dropdown" class="is-hidden" style="position: absolute; top: 25px">
-              <button *ngIf="canEdit" class="button is-danger is-light" (click)="toggleDeleteBoardModal()">Xóa bảng
+              <button *ngIf="canEdit" class="button is-danger is-light" (click)="toggleDeleteBoardModal()">Xóa Bảng
               </button>
             </div>
           </div>
