--- a/src/app/trello/board-view/board-view.component.scss
+++ b/src/app/trello/board-view/board-view.component.scss
@@ -227,9 +227,6 @@ h1.app-name {
 .window-close {
   display: none;
   cursor: pointer;
-  position: absolute;
-  margin-left: 265px;
-  top: 150px;
 }
 
 .board-column:hover .window-close {
@@ -370,7 +367,7 @@ h1.app-name {
 
 .title-column {
   height: 40px;
-  background: rgb(228 243 250);
+  background: inherit;
   font-weight: bold;
   border: none;
   position: revert;
