--- a/src/app/share/navbar-board-header/navbar-board-header.component.html
+++ b/src/app/share/navbar-board-header/navbar-board-header.component.html
@@ -85,7 +85,16 @@
                   </li>
                 </ul>
               </div>
-
+              <div style=" padding-left: 10px;">
+                Nhãn
+                <ul class="checkbox">
+                  <li *ngFor="let tag of this.currentBoard.tags">
+                    <input class="form-check-label" type="checkbox" [value]="tag.id"
+                           class="label-filter-option filter-option">
+                    <span class="tag is-light">@{{tag.name}}</span>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
           <button class="button is-primary" (click)="toggleElement('filter-btn-dropdown')">
