--- a/src/app/trello/workspace/workspacehome/workspace-home.component.html
+++ b/src/app/trello/workspace/workspacehome/workspace-home.component.html
@@ -15,8 +15,7 @@
           <div class="card-header"><p class="card-header-title">{{board.title}}</p></div>
           <div class="card-content">
             <div class="content">
-              <span style="font-size: small"><b>Id: </b>{{board.id}}</span> <br>
-              <span style="font-size: small"><b>Owner: </b>{{board.owner.username}}</span>
+              <span style="font-size: small"><b>Chủ sở hữu: </b>{{board.owner.username}}</span>
             </div>
           </div>
         </div>
