--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   </span>
   <div class="nav-brand-start">
     <div class="nav-item-start">
-      <h1><i class="fab fa-trello logo-icon" style="margin-left: 300px"></i>Trello H3K</h1>
+      <h1 style="position: fixed"><i class="fab fa-trello logo-icon"></i>Trello H3K</h1>
     </div>
   </div>
   <div id="search-section" class="" *ngIf="currentUser != null">
