--- a/src/app/share/navbar/navbar.component.scss
+++ b/src/app/share/navbar/navbar.component.scss
@@ -98,9 +98,9 @@ h2:hover{
 
 .nav-brand-start {
   display: flex;
-  justify-content: flex-start;
   height: 40px;
-  margin: auto auto auto;
+  margin-left: 43%;
+  margin-right: 34%;
 }
 
 .nav-brand-end {
