--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -81,9 +81,9 @@
   </div>
   <div class="icon-item" *ngIf="currentUser">
     <div class="dropdown is-hoverable is-right">
-      <div class="nav-item-start">
-        <h2>{{loggedInUser.username}}</h2>
-      </div>
+<!--      <div class="nav-item-start">-->
+<!--        <p>{{loggedInUser.username}}</p>-->
+<!--      </div>-->
       <div class="dropdown-trigger">
         <a class="icon-link" aria-haspopup="true" aria-controls="dropdown-menu4">
           <img [src]="loggedInUser.image" class="img-circle"/>
