fix nut hien thi mat khau

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="text-danger">
-          <label><input type="checkbox" (click)="showPassword()">Hiện mật khẩu</label>
+          <label><input style="width: auto; margin-right: 5px" type="checkbox" (click)="showPassword()">Hiện mật khẩu</label>
         </div>
         <br>
         <div class="form-group">
