--- a/src/app/trello/boards/boards.component.html
+++ b/src/app/trello/boards/boards.component.html
@@ -64,8 +64,8 @@
       <label class="label">Loại</label>
       <div class="control">
         <select class="input" [(ngModel)]="newBoard.type">
-          <option value="Private">Riêng tư</option>
-          <option value="Public">Công khai</option>
+          <option value="Riêng tư">Riêng tư</option>
+          <option value="Công khai">Công khai</option>
         </select>
       </div>
       <br>
