--- a/src/app/trello/workspace/workspacehome/workspace-home.component.html
+++ b/src/app/trello/workspace/workspacehome/workspace-home.component.html
@@ -39,9 +39,9 @@
       <label class="label">Loại</label>
       <div class="control">
         <select class="input" [(ngModel)]="newBoard.type">
-          <option value="Private">Riêng tư</option>
-          <option value="Workspace">Nhóm</option>
-          <option value="Public">Công khai</option>
+          <option value="Riêng tư">Riêng tư</option>
+          <option value="Nhóm">Nhóm</option>
+          <option value="Công khai">Công khai</option>
         </select>
       </div>
       <br>
